# Agent-Baking-A-Cake

./: .gitignore  DESIGN.md  README.md  pyproject.toml
kitchen_agent/: __init__.py  run.py
kitchen_agent/agent/: __init__.py  claude_agent.py  tools.py
kitchen_agent/env/: __init__.py  environment.py  observation.py  pathfinding.py  transitions.py
kitchen_agent/rendering/: __init__.py  renderer.py  sprites.py
kitchen_agent/tasks/: __init__.py  bake_cake.py  get_apple.py
kitchen_agent/world/: __init__.py  builder.py  schemas.py
scripts/: recipe_demo.py
tests/: test_goal_check.py  test_schemas.py  test_transitions.py
